[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/Tres/steve_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://ASSETS/Musics/Jump.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Steve.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.5619
height = 11.3029

[node name="Steve" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.561867, 14.8746 )
shape = SubResource( 1 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Rocket" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RocketCD" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="Rocket" to="." method="_on_Rocket_timeout"]
[connection signal="timeout" from="RocketCD" to="." method="_on_RocketCD_timeout"]
